--- a/app/src/main/res/drawable/ic_favorite.xml
+++ b/app/src/main/res/drawable/ic_favorite.xml
@@ -1,12 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="28dp"
-    android:height="26dp"
-    android:viewportWidth="28"
-    android:viewportHeight="26">
+    android:width="27dp"
+    android:height="24dp"
+    android:viewportWidth="27"
+    android:viewportHeight="24">
   <path
-      android:strokeWidth="1"
-      android:pathData="M14.079,25L12.183,23.274C5.447,17.166 1,13.137 1,8.193C1,4.165 4.165,1 8.193,1C10.469,1 12.653,2.059 14.079,3.734C15.505,2.059 17.689,1 19.965,1C23.993,1 27.158,4.165 27.158,8.193C27.158,13.137 22.711,17.166 15.976,23.287L14.079,25Z"
-      android:fillColor="#00000000"
-      android:fillType="evenOdd"
-      android:strokeColor="#9B9B9B"/>
+      android:pathData="M13.079,24L11.183,22.274C4.447,16.166 0,12.137 0,7.193C0,3.165 3.165,0 7.193,0C9.469,0 11.653,1.059 13.079,2.734C14.505,1.059 16.689,0 18.965,0C22.993,0 26.158,3.165 26.158,7.193C26.158,12.137 21.711,16.166 14.976,22.287L13.079,24Z"
+      android:fillColor="#DB3022"
+      android:fillType="evenOdd"/>
 </vector>
