--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -3,7 +3,7 @@
     <item
         android:id="@+id/home"
         android:enabled="true"
-        android:icon="@drawable/ic_home_line"
+        android:icon="@drawable/ic_home"
         android:title="Home" />
     <item
         android:id="@+id/shop"
