--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="12dp"
+    android:backgroundTint="@color/color_back_ground"
     tools:context=".activity.ForgotPasswordActivity">
 
     <TextView
@@ -85,7 +86,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
-        android:background="@drawable/bg_boder_red"
+        android:background="@drawable/bg_border_red"
         android:fontFamily="@font/metropolis_medium"
         android:text="send"
         android:textColor="@color/white"
