--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:backgroundTint="#E5E5E5"
+    android:backgroundTint="@color/color_back_ground"
     android:padding="12dp"
     tools:context=".activity.SignUpActivity">
 
@@ -165,7 +165,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:background="@drawable/bg_boder_red"
+        android:background="@drawable/bg_border_red"
         android:fontFamily="@font/metropolis_medium"
         android:text="Sign up"
         android:textColor="@color/white"
