--- a/app/src/main/res/drawable/ic_home_line.xml
+++ b/app/src/main/res/drawable/ic_home_line.xml
@@ -8,5 +8,5 @@
       android:pathData="M12.294,25V16.529H17.941V25H25V13.706H29.235L15.118,1L1,13.706H5.235V25H12.294Z"
       android:fillColor="#00000000"
       android:fillType="evenOdd"
-      android:strokeColor="#9B9B9B"/>
+      android:strokeColor="@color/primary"/>
 </vector>
