--- a/app/src/main/res/layout/line_item_new.xml
+++ b/app/src/main/res/layout/line_item_new.xml
@@ -1,6 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="164dp"
+    android:layout_height="260dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="177dp"
+        android:layout_height="177dp"
+        android:scaleType="centerCrop"
+        android:cropToPadding="true"
+        android:padding="4dp"
+        android:src="@tools:sample/avatars" />
+
+    <ImageButton
+        android:id="@+id/btnAddFavorite"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="6dp"
+        android:layout_marginBottom="67dp"
+        android:background="@drawable/button_shadow"
+        android:padding="13dp"
+        android:src="@drawable/ic_favorite_small"
+        app:tint="@color/gray" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView2"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="65dp"
+        app:srcCompat="@drawable/ic_rating" />
+
+    <TextView
+        android:id="@+id/tvBranchName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="46dp"
+        android:fontFamily="@font/metropolis_regular"
+        android:text="Style"
+        android:textColor="@color/gray"
+        android:textSize="11sp" />
+
+
+</RelativeLayout>
