--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -3,26 +3,31 @@
     <item
         android:id="@+id/home"
         android:enabled="true"
-        android:icon="@drawable/ic_home"
+        android:icon="@drawable/home_selector"
+        android:iconTint="@color/red_app"
         android:title="Home" />
     <item
         android:id="@+id/shop"
         android:enabled="true"
-        android:icon="@drawable/ic_shopping"
+        android:icon="@drawable/shop_selector"
+        android:iconTint="@color/red_app"
         android:title="Shop" />
     <item
         android:id="@+id/bag"
         android:enabled="true"
-        android:icon="@drawable/ic_bag"
+        android:icon="@drawable/bag_selector"
+        android:iconTint="@color/red_app"
         android:title="Bag" />
     <item
         android:id="@+id/favorite"
         android:enabled="true"
-        android:icon="@drawable/ic_favorite"
+        android:icon="@drawable/favorite_selector"
+        android:iconTint="@color/red_app"
         android:title="Favorite" />
     <item
         android:id="@+id/profile"
         android:enabled="true"
-        android:icon="@drawable/ic_profile"
+        android:icon="@drawable/profile_selector"
+        android:iconTint="@color/red_app"
         android:title="Profile" />
 </menu>
