--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,9 @@
     <color name="black">#222222</color>
     <color name="white">#FFFFFFFF</color>
     <color name="success">#2AA952</color>
+    <color name="color_back_ground">#F9F9F9</color>
+    <color name="red_app">#DB3022</color>
+    <color name="gray">#9B9B9B</color>
+    <color name="primary">#DB3022</color>
+    <color name="error">#F01F0E</color>
 </resources>
