--- a/app/src/main/res/layout/line_item_new.xml
+++ b/app/src/main/res/layout/line_item_new.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="164dp"
-    android:layout_margin="5dp"
+    android:layout_margin="10dp"
     android:background="@drawable/border_image"
     android:layout_height="260dp">
 
@@ -14,7 +14,7 @@
         android:scaleType="centerCrop"
         android:cropToPadding="true"
         android:padding="4dp"
-        android:src="@tools:sample/avatars" />
+        android:src="@drawable/img" />
 
     <ImageButton
         android:id="@+id/btnAddFavorite"
@@ -30,7 +30,7 @@
         app:tint="@color/gray" />
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/imvRating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/imgItem"
