create line items

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -81,14 +81,16 @@
         </com.google.android.material.textfield.TextInputEditText>
     </com.google.android.material.textfield.TextInputLayout>
 
-    <Button
+    <TextView
         android:id="@+id/btnSend"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="343dp"
+        android:layout_height="48dp"
         android:layout_marginTop="48dp"
         android:background="@drawable/bg_border_red"
         android:fontFamily="@font/metropolis_medium"
-        android:text="send"
+        android:text="SEND"
+        android:elevation="10dp"
+        android:gravity="center"
         android:textColor="@color/white"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
