--- a/app/src/main/res/layout/line_item_list_in_catalog.xml
+++ b/app/src/main/res/layout/line_item_list_in_catalog.xml
@@ -4,17 +4,20 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
+
     <RelativeLayout
         android:layout_width="343dp"
         android:layout_height="104dp"
         android:layout_marginTop="15dp"
+        android:elevation="10dp"
         android:layout_marginBottom="16dp"
-        android:background="@drawable/border_image">
+        android:background="@drawable/border_item">
 
         <ImageView
             android:id="@+id/imgItem"
             android:layout_width="104dp"
             android:layout_height="104dp"
+            android:scaleType="centerCrop"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/img" />
@@ -34,7 +37,7 @@
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/tvBranchName"
+            android:id="@+id/tvNameBranch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -91,6 +94,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="307dp"
+        android:elevation="10dp"
         android:layout_marginTop="93dp"
         android:background="@drawable/button_shadow"
         android:padding="13dp"
