--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,6 +17,8 @@
         android:text="Login"
         android:textColor="@color/black"
         android:textSize="40sp"
+        android:padding="10dp"
+        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.076"
         app:layout_constraintStart_toStartOf="parent"
@@ -162,15 +164,17 @@
 
     </LinearLayout>
 
-    <Button
+    <TextView
         android:id="@+id/btnLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="343dp"
+        android:layout_height="48dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/bg_border_red"
         android:fontFamily="@font/metropolis_medium"
-        android:text="login"
+        android:text="LOGIN"
+        android:elevation="10dp"
         android:textColor="@color/white"
+        android:gravity="center"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -204,12 +208,14 @@
             android:id="@+id/btnLoginGg"
             android:layout_width="100dp"
             android:layout_height="70dp"
+            android:elevation="10dp"
             app:srcCompat="@drawable/ic_gg" />
 
         <ImageView
             android:id="@+id/btnLoginFb"
             android:layout_width="100dp"
             android:layout_height="70dp"
+            android:elevation="10dp"
             app:srcCompat="@drawable/ic_fb" />
     </LinearLayout>
 
