--- a/app/src/main/res/layout/line_item_list_in_oder.xml
+++ b/app/src/main/res/layout/line_item_list_in_oder.xml
@@ -3,47 +3,55 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="343dp"
     android:layout_height="104dp"
-    android:layout_margin="10dp"
-    android:background="@drawable/border_image">
+    android:background="@drawable/border_item"
+    android:elevation="10dp">
 
     <ImageView
         android:id="@+id/imgItem"
         android:layout_width="104dp"
         android:layout_height="104dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="0dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/img" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/tvNameItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="9dp"
+        android:layout_marginStart="115dp"
         android:layout_marginTop="11dp"
-        android:layout_toEndOf="@+id/imgItem"
         android:end="@+id/imgItem"
         android:fontFamily="@font/metropolis_semi_bold"
         android:text="Name Item"
         android:textColor="@color/black"
         android:textSize="16sp" />
 
-    <ImageView
-        android:id="@+id/btnMenu"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+    <TextView
+        android:id="@+id/tvNameBranch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="315dp"
-        android:paddingTop="12dp"
-        android:paddingBottom="12dp"
-        app:srcCompat="@drawable/ic_menu" />
+        android:layout_marginStart="115dp"
+        android:layout_marginTop="34dp"
+        android:fontFamily="@font/metropolis_light"
+        android:text="Branch"
+        android:textColor="@color/gray"
+        android:textSize="11sp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView8"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="113dp"
-        android:layout_marginTop="4dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="115dp"
+        android:layout_marginTop="51dp"
         android:orientation="horizontal">
 
 
@@ -51,6 +59,7 @@
             android:id="@+id/textView10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/metropolis_light"
             android:text="Color: "
             android:textColor="@color/gray"
             android:textSize="13sp" />
@@ -59,6 +68,7 @@
             android:id="@+id/tvColor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/metropolis_light"
             android:text="Black"
             android:textColor="@color/black"
             android:textSize="13sp" />
@@ -68,6 +78,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
+            android:fontFamily="@font/metropolis_light"
             android:text="Size: "
             android:textColor="@color/gray"
             android:textSize="13sp" />
@@ -76,48 +87,40 @@
             android:id="@+id/tvSize"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/metropolis_light"
             android:text="L"
             android:textColor="@color/black"
             android:textSize="13sp" />
 
     </LinearLayout>
 
-    <ImageButton
-        android:id="@+id/btnPlus"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="189dp"
-        android:layout_marginTop="56dp"
-        android:background="@drawable/button_shadow"
-        android:src="@drawable/ic_plus"
-        app:src="@drawable/ic_plus" />
-
-    <ImageButton
-        android:id="@+id/btnSub"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="116dp"
-        android:layout_marginTop="56dp"
-        android:background="@drawable/button_shadow"
-        android:src="@drawable/ic_sub"
-        app:src="@drawable/ic_plus" />
-
-    <TextView
-        android:id="@+id/tvCount"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="168dp"
-        android:layout_marginTop="65dp"
-        android:fontFamily="@font/metropolis_medium"
-        android:text="1"
-        android:textColor="@color/black"
-        android:textSize="14sp" />
+        android:layout_marginStart="115dp"
+        android:layout_marginTop="75dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/metropolis_light"
+            android:text="Units: "
+            android:textColor="@color/gray"
+            android:textSize="11sp" />
+
+        <TextView
+            android:id="@+id/tvCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/metropolis_light"
+            android:text="1"
+            android:textColor="@color/black"
+            android:textSize="11sp" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -132,18 +135,17 @@
             android:id="@+id/tvPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
             android:fontFamily="@font/metropolis_medium"
-            android:text="51" />
+            android:text="51"
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/textView14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
             android:fontFamily="@font/metropolis_medium"
-            android:text="$" />
+            android:text="$"
+            android:textColor="@color/black" />
     </LinearLayout>
-
 
 </RelativeLayout>
