--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,8 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/color_back_ground"
     android:layout_height="match_parent"
-    tools:context=".fragment.HomeFragment">
+    android:layout_marginBottom="60dp"
+    tools:context=".activity.main.HomeFragment">
 
 
     <ScrollView
@@ -18,16 +20,17 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
+                android:layout_marginTop="55dp"
                 android:layout_height="wrap_content">
 
                 <ImageView
                     android:id="@+id/imvBgHome"
                     android:layout_width="match_parent"
                     android:layout_height="196dp"
+                    android:scaleType="centerCrop"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
-                    android:scaleType="centerCrop"
-                    tools:src="@drawable/img_2" />
+                    android:src="@drawable/img_2" />
 
                 <TextView
                     android:id="@+id/textView16"
@@ -40,7 +43,7 @@
                     android:fontFamily="@font/metropolis_extra_bold"
                     android:text="Street clothes"
                     android:textColor="@color/white"
-                    android:textSize="34dp" />
+                    android:textSize="34sp" />
             </RelativeLayout>
 
             <RelativeLayout
@@ -71,7 +74,7 @@
                     android:fontFamily="@font/metropolis_light"
                     android:text="Super summer sale"
                     android:textColor="@color/gray"
-                    android:textSize="11sp" />
+                    android:textSize="14sp" />
 
                 <TextView
                     android:id="@+id/btnViewAllItemSale"
@@ -84,7 +87,7 @@
                     android:fontFamily="@font/metropolis_medium"
                     android:text="View all"
                     android:textColor="@color/red_app"
-                    android:textSize="11sp" />
+                    android:textSize="14sp" />
             </RelativeLayout>
 
             <androidx.recyclerview.widget.RecyclerView
@@ -109,7 +112,7 @@
                     android:fontFamily="@font/metropolis_extra_bold"
                     android:text="New"
                     android:textColor="@color/black"
-                    android:textSize="34dp" />
+                    android:textSize="34sp" />
 
                 <TextView
                     android:id="@+id/textView20"
@@ -122,7 +125,7 @@
                     android:fontFamily="@font/metropolis_light"
                     android:text="You've never seen it before!"
                     android:textColor="@color/gray"
-                    android:textSize="11sp" />
+                    android:textSize="14sp" />
 
                 <TextView
                     android:id="@+id/btnViewAllItemNew"
@@ -135,7 +138,7 @@
                     android:fontFamily="@font/metropolis_medium"
                     android:text="View all"
                     android:textColor="@color/red_app"
-                    android:textSize="11sp" />
+                    android:textSize="14sp" />
             </RelativeLayout>
 
             <androidx.recyclerview.widget.RecyclerView
