--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -60,10 +60,10 @@
         app:endIconMode="custom"
         app:endIconTint="@color/success"
         android:hint="Email"
-        app:boxCornerRadiusBottomEnd="15dp"
-        app:boxCornerRadiusBottomStart="15dp"
-        app:boxCornerRadiusTopEnd="15dp"
-        app:boxCornerRadiusTopStart="15dp"
+        app:boxCornerRadiusBottomEnd="10dp"
+        app:boxCornerRadiusBottomStart="10dp"
+        app:boxCornerRadiusTopEnd="10dp"
+        app:boxCornerRadiusTopStart="10dp"
         app:boxBackgroundColor="@color/white"
         app:endIconCheckable="true"
         app:helperTextTextColor="@android:color/holo_red_light"
@@ -77,6 +77,7 @@
             android:id="@+id/edtEmail"
             android:layout_width="match_parent"
             android:layout_height="58dp"
+            android:fontFamily="@font/metropolis_medium"
             android:inputType="textEmailAddress">
         </com.google.android.material.textfield.TextInputEditText>
     </com.google.android.material.textfield.TextInputLayout>
