--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -73,10 +73,10 @@
         android:layout_marginTop="16dp"
         android:hint="Email"
         app:boxBackgroundColor="@color/white"
-        app:boxCornerRadiusBottomEnd="15dp"
-        app:boxCornerRadiusBottomStart="15dp"
-        app:boxCornerRadiusTopEnd="15dp"
-        app:boxCornerRadiusTopStart="15dp"
+        app:boxCornerRadiusBottomEnd="10dp"
+        app:boxCornerRadiusBottomStart="10dp"
+        app:boxCornerRadiusTopEnd="10dp"
+        app:boxCornerRadiusTopStart="10dp"
         app:endIconCheckable="true"
         app:endIconMode="custom"
         app:endIconTint="@color/success"
@@ -88,6 +88,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edtEmail"
+            android:fontFamily="@font/metropolis_medium"
             android:layout_width="match_parent"
             android:layout_height="58dp"
             android:inputType="textEmailAddress" />
@@ -103,10 +104,10 @@
         android:layout_marginTop="17dp"
         android:hint="Password"
         app:boxBackgroundColor="@color/white"
-        app:boxCornerRadiusBottomEnd="15dp"
-        app:boxCornerRadiusBottomStart="15dp"
-        app:boxCornerRadiusTopEnd="15dp"
-        app:boxCornerRadiusTopStart="15dp"
+        app:boxCornerRadiusBottomEnd="10dp"
+        app:boxCornerRadiusBottomStart="10dp"
+        app:boxCornerRadiusTopEnd="10dp"
+        app:boxCornerRadiusTopStart="10dp"
         app:endIconMode="password_toggle"
         app:helperTextTextColor="@android:color/holo_red_light"
         app:layout_constraintEnd_toEndOf="parent"
@@ -118,6 +119,7 @@
             android:id="@+id/edtPassword"
             android:layout_width="match_parent"
             android:layout_height="58dp"
+            android:fontFamily="@font/metropolis_medium"
             android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
 
