--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -45,10 +45,10 @@
         android:layout_marginTop="100dp"
         android:hint="Name"
         app:boxBackgroundColor="@color/white"
-        app:boxCornerRadiusBottomEnd="15dp"
-        app:boxCornerRadiusBottomStart="15dp"
-        app:boxCornerRadiusTopEnd="15dp"
-        app:boxCornerRadiusTopStart="15dp"
+        app:boxCornerRadiusBottomEnd="10dp"
+        app:boxCornerRadiusBottomStart="10dp"
+        app:boxCornerRadiusTopEnd="10dp"
+        app:boxCornerRadiusTopStart="10dp"
         app:endIconCheckable="true"
         app:endIconMode="custom"
         app:endIconTint="@color/success"
@@ -62,6 +62,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edtName"
             android:layout_width="match_parent"
+            android:fontFamily="@font/metropolis_medium"
             android:layout_height="58dp"
             android:inputType="textPersonName" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -76,10 +77,10 @@
         android:layout_marginTop="17dp"
         android:hint="Email"
         app:boxBackgroundColor="@color/white"
-        app:boxCornerRadiusBottomEnd="15dp"
-        app:boxCornerRadiusBottomStart="15dp"
-        app:boxCornerRadiusTopEnd="15dp"
-        app:boxCornerRadiusTopStart="15dp"
+        app:boxCornerRadiusBottomEnd="10dp"
+        app:boxCornerRadiusBottomStart="10dp"
+        app:boxCornerRadiusTopEnd="10dp"
+        app:boxCornerRadiusTopStart="10dp"
         app:endIconMode="custom"
         app:endIconTint="@color/success"
         app:helperTextTextColor="#9A5E5E"
@@ -91,6 +92,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edtEmail"
             android:layout_width="match_parent"
+            android:fontFamily="@font/metropolis_medium"
             android:layout_height="58dp"
             android:inputType="textEmailAddress">
 
@@ -105,10 +107,10 @@
         android:layout_marginTop="17dp"
         android:hint="Password"
         app:boxBackgroundColor="@color/white"
-        app:boxCornerRadiusBottomEnd="15dp"
-        app:boxCornerRadiusBottomStart="15dp"
-        app:boxCornerRadiusTopEnd="15dp"
-        app:boxCornerRadiusTopStart="15dp"
+        app:boxCornerRadiusBottomEnd="10dp"
+        app:boxCornerRadiusBottomStart="10dp"
+        app:boxCornerRadiusTopEnd="10dp"
+        app:boxCornerRadiusTopStart="10dp"
         app:counterEnabled="true"
         app:counterMaxLength="20"
         app:endIconMode="password_toggle"
@@ -123,6 +125,7 @@
             android:id="@+id/edtPassword"
             android:layout_width="match_parent"
             android:layout_height="58dp"
+            android:fontFamily="@font/metropolis_medium"
             android:inputType="textPassword"
             app:counterMaxLength="20">
 
