--- a/app/src/main/res/layout/bottom_sheet_select_size.xml
+++ b/app/src/main/res/layout/bottom_sheet_select_size.xml
@@ -1,30 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/bg_dialog_select_size">
+    android:layout_height="370dp"
+    android:background="@drawable/bg_dialog_select_size"
+    tools:ignore="MissingDefaultResource">
 
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="176dp"
         android:layout_marginTop="14dp"
         app:srcCompat="@drawable/ic_line" />
 
     <TextView
         android:id="@+id/textView11"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="159dp"
+        android:gravity="center"
         android:layout_marginTop="36dp"
         android:fontFamily="@font/metropolis_semi_bold"
         android:text="Select size"
