--- a/app/src/main/res/layout/fragment_cancelled.xml
+++ b/app/src/main/res/layout/fragment_cancelled.xml
@@ -3,13 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_back_ground"
-    tools:context=".activity.main.BagFragment">
+    tools:context=".activity.oder.CancelledFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="Cancelled" />
 
 </FrameLayout>
