--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -2,8 +2,9 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/color_back_ground"
     android:layout_height="match_parent"
-    tools:context=".fragment.FavoriteFragment">
+    tools:context=".activity.main.FavoriteFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
