--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -2,8 +2,9 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/color_back_ground"
     android:layout_height="match_parent"
-    tools:context=".fragment.ShopFragment">
+    tools:context=".activity.main.ShopFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
