--- a/app/src/main/res/layout/line_item_list_in_bag.xml
+++ b/app/src/main/res/layout/line_item_list_in_bag.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="343dp"
+    android:layout_width="match_parent"
     android:layout_height="104dp"
     android:layout_margin="10dp"
     android:elevation="10dp"
@@ -35,9 +35,10 @@ android:layout_alignParentStart="true"
         android:id="@+id/btnMenu"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="315dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="1dp"
         android:paddingTop="12dp"
         android:paddingBottom="12dp"
         app:srcCompat="@drawable/ic_menu"
@@ -126,9 +127,9 @@ android:layout_alignParentStart="true"
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="305dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginTop="64dp"
         android:orientation="horizontal">
 
