--- a/app/src/main/res/layout/line_item_list_in_catalog.xml
+++ b/app/src/main/res/layout/line_item_list_in_catalog.xml
@@ -6,7 +6,7 @@
 
 
     <RelativeLayout
-        android:layout_width="343dp"
+        android:layout_width="match_parent"
         android:layout_height="104dp"
         android:layout_marginTop="15dp"
         android:elevation="10dp"
@@ -91,12 +91,11 @@
         android:id="@+id/btnAddFavorite"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="307dp"
-        android:elevation="10dp"
+        android:layout_alignParentEnd="true"
         android:layout_marginTop="93dp"
         android:background="@drawable/button_shadow"
+        android:elevation="10dp"
         android:padding="13dp"
         android:src="@drawable/ic_favorite_small"
         app:tint="@color/gray" />
