--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:backgroundTint="@color/color_back_ground"
-    android:padding="12dp"
+    android:padding="14dp"
     tools:context=".activity.LoginActivity">
 
     <TextView
@@ -168,7 +168,7 @@
 
     <TextView
         android:id="@+id/btnLogin"
-        android:layout_width="343dp"
+        android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/bg_border_red"
