--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -93,7 +93,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rcvListItemSale"
                 android:layout_width="match_parent"
-                android:layout_height="260dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="10dp" />
 
@@ -144,8 +144,9 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rcvListItemNew"
                 android:layout_width="match_parent"
-                android:layout_height="260dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
+                android:layout_marginBottom="60dp"
                 android:layout_marginTop="10dp" />
         </LinearLayout>
     </ScrollView>
