--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -62,8 +62,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edtName"
             android:layout_width="match_parent"
-            android:fontFamily="@font/metropolis_medium"
             android:layout_height="58dp"
+            android:fontFamily="@font/metropolis_medium"
             android:inputType="textPersonName" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -92,8 +92,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edtEmail"
             android:layout_width="match_parent"
-            android:fontFamily="@font/metropolis_medium"
             android:layout_height="58dp"
+            android:fontFamily="@font/metropolis_medium"
             android:inputType="textEmailAddress">
 
         </com.google.android.material.textfield.TextInputEditText>
@@ -111,11 +111,7 @@
         app:boxCornerRadiusBottomStart="10dp"
         app:boxCornerRadiusTopEnd="10dp"
         app:boxCornerRadiusTopStart="10dp"
-        app:counterEnabled="true"
-        app:counterMaxLength="20"
         app:endIconMode="password_toggle"
-        app:helperText="Default pass is 123"
-        app:helperTextTextColor="@color/purple_200"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layout_email"
@@ -131,17 +127,44 @@
 
         </com.google.android.material.textfield.TextInputEditText>
     </com.google.android.material.textfield.TextInputLayout>
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/layout_confirm_password"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:hint="Confirm password"
+        app:boxBackgroundColor="@color/white"
+        app:boxCornerRadiusBottomEnd="10dp"
+        app:boxCornerRadiusBottomStart="10dp"
+        app:boxCornerRadiusTopEnd="10dp"
+        app:boxCornerRadiusTopStart="10dp"
+        app:endIconMode="password_toggle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/layout_password"
+        app:startIconDrawable="@drawable/ic_lock_repeat">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edtConfirmPassword"
+            android:layout_width="match_parent"
+            android:layout_height="58dp"
+            android:fontFamily="@font/metropolis_medium"
+            android:inputType="textPassword"
+            app:counterMaxLength="20">
+
+        </com.google.android.material.textfield.TextInputEditText>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_marginTop="5dp"
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.881"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/layout_password">
+        app:layout_constraintTop_toBottomOf="@+id/layout_confirm_password">
 
         <TextView
             android:id="@+id/textView2"
@@ -166,12 +189,12 @@
     <TextView
         android:id="@+id/btnSignUp"
         android:layout_width="match_parent"
-        android:elevation="10dp"
         android:layout_height="48dp"
-        android:gravity="center"
         android:layout_marginTop="16dp"
         android:background="@drawable/bg_border_red"
+        android:elevation="10dp"
         android:fontFamily="@font/metropolis_medium"
+        android:gravity="center"
         android:text="SIGN UP"
         android:textColor="@color/white"
         android:textSize="15sp"
@@ -184,7 +207,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="50dp"
         android:fontFamily="@font/metropolis_medium"
         android:text="Or sign up with social account"
         android:textColor="@color/black"
