--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -10,8 +10,6 @@
     <!-- TODO: Update blank fragment layout -->
 
 
-
-
     <TextView
         android:id="@+id/textView22"
         android:layout_width="wrap_content"
@@ -35,20 +33,13 @@
         android:layout_marginTop="138dp"
         android:orientation="horizontal">
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            app:cardCornerRadius="160dp"
-            app:cardElevation="4dp">
 
-            <ImageView
-                android:id="@+id/imageView7"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/img" />
-        </androidx.cardview.widget.CardView>
+        <ImageView
+            android:id="@+id/imgUser"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/img" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -58,7 +49,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView23"
+                android:id="@+id/tvNameUser"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -70,7 +61,7 @@
                 android:textSize="18sp" />
 
             <TextView
-                android:id="@+id/textView24"
+                android:id="@+id/tvEmailUser"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -85,8 +76,8 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:layout_marginTop="220dp">
 
         <LinearLayout
@@ -98,8 +89,8 @@
                 android:id="@+id/cvMyOder"
                 android:layout_width="match_parent"
                 android:layout_height="75dp"
-                android:backgroundTint="@color/color_back_ground"
-                android:layout_margin="10dp">
+                android:layout_margin="10dp"
+                android:backgroundTint="@color/color_back_ground">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -168,12 +159,13 @@
                 </RelativeLayout>
 
             </androidx.cardview.widget.CardView>
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/cvAddresses"
                 android:layout_width="match_parent"
                 android:layout_height="75dp"
-                android:backgroundTint="@color/color_back_ground"
-                android:layout_margin="10dp">
+                android:layout_margin="10dp"
+                android:backgroundTint="@color/color_back_ground">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -215,6 +207,7 @@
                         android:text="3"
                         android:textColor="@color/red_app"
                         android:textSize="14sp" />
+
                     <TextView
                         android:id="@+id/textView1"
                         android:layout_width="wrap_content"
@@ -230,12 +223,13 @@
                 </RelativeLayout>
 
             </androidx.cardview.widget.CardView>
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/cvPaymentMethods"
                 android:layout_width="match_parent"
                 android:layout_height="75dp"
-                android:backgroundTint="@color/color_back_ground"
-                android:layout_margin="10dp">
+                android:layout_margin="10dp"
+                android:backgroundTint="@color/color_back_ground">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -293,12 +287,13 @@
                 </RelativeLayout>
 
             </androidx.cardview.widget.CardView>
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/cvPromoCodes"
                 android:layout_width="match_parent"
                 android:layout_height="75dp"
-                android:backgroundTint="@color/color_back_ground"
-                android:layout_margin="10dp">
+                android:layout_margin="10dp"
+                android:backgroundTint="@color/color_back_ground">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -344,12 +339,13 @@
                 </RelativeLayout>
 
             </androidx.cardview.widget.CardView>
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/cvMyReviews"
                 android:layout_width="match_parent"
                 android:layout_height="75dp"
-                android:backgroundTint="@color/color_back_ground"
-                android:layout_margin="10dp">
+                android:layout_margin="10dp"
+                android:backgroundTint="@color/color_back_ground">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -419,12 +415,13 @@
                 </RelativeLayout>
 
             </androidx.cardview.widget.CardView>
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/cvSettings"
                 android:layout_width="match_parent"
                 android:layout_height="75dp"
-                android:backgroundTint="@color/color_back_ground"
-                android:layout_margin="10dp">
+                android:layout_margin="10dp"
+                android:backgroundTint="@color/color_back_ground">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
