--- a/app/src/main/res/layout/line_item_new_list_in_home.xml
+++ b/app/src/main/res/layout/line_item_new_list_in_home.xml
@@ -3,10 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="164dp"
-    android:layout_margin="10dp"
-    android:elevation="10dp"
+    android:layout_marginEnd="10dp"
+    android:layout_marginBottom="10dp"
+    android:elevation="4dp"
+    android:padding="4dp"
     android:background="@drawable/border_item"
-    android:layout_height="260dp">
+    android:layout_height="280dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -30,14 +32,14 @@
 
     <ImageButton
         android:id="@+id/btnAddFavorite"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="44dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginTop="153dp"
-        android:layout_marginEnd="6dp"
-        android:layout_marginBottom="67dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginBottom="79dp"
         android:background="@drawable/button_shadow"
         android:padding="13dp"
         android:src="@drawable/ic_favorite_small"
@@ -90,7 +92,34 @@
         android:fontFamily="@font/metropolis_medium"
         android:textColor="@color/black"
         android:layout_marginBottom="5dp"
-        android:text="10$" />
+        android:text="10" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/tvPrice"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="5dp"
+        android:layout_toEndOf="@+id/tvPriceNew"
+        android:fontFamily="@font/metropolis_medium"
+        android:text="$"
+        android:textColor="@color/red_app"
+        android:textSize="14sp" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/tvPrice"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="5dp"
+        android:layout_toEndOf="@+id/tvPrice"
+        android:fontFamily="@font/metropolis_medium"
+        android:text="$"
+        android:textColor="@color/black"
+        android:textSize="14sp" />
+
     <TextView
         android:id="@+id/tvPriceNew"
         android:layout_width="wrap_content"
@@ -98,12 +127,12 @@
         android:layout_alignStart="@+id/tvNameItem"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="50dp"
         android:textSize="14sp"
         android:fontFamily="@font/metropolis_medium"
         android:textColor="@color/red_app"
         android:layout_marginBottom="5dp"
-        android:text="10$" />
+        android:text="10" />
 
     <TextView
         android:id="@+id/tvPriceOld"
