--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/color_back_ground"
     android:layout_height="match_parent"
     android:padding="14dp"
     tools:context=".activity.settings.SettingsActivity">
@@ -36,19 +37,75 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="120dp"
         android:fontFamily="@font/metropolis_semi_bold"
-        android:text="Change Personal Information"
+        android:text="Personal Information"
         android:textColor="@color/black"
         android:textSize="16sp" />
 
     <TextView
-        android:id="@+id/btnSaveInfo"
+        android:id="@+id/textView23"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="170dp"
+        android:layout_marginStart="100dp"
+        android:fontFamily="@font/metropolis_medium"
+        android:text="Full name"
+        android:textColor="@color/gray"
+        android:textSize="14sp" />
+
+    <TextView
+        android:id="@+id/textView24"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="100dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="250dp"
+        android:fontFamily="@font/metropolis_medium"
+        android:text="Email"
+        android:textColor="@color/gray"
+        android:textSize="14sp" />
+
+    <TextView
+        android:id="@+id/tvFullName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="200dp"
+        android:fontFamily="@font/metropolis_semi_bold"
+        android:text="Full name"
+        android:textColor="@color/black"
+        android:textSize="14sp" />
+
+    <TextView
+        android:id="@+id/tvEmailUser"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="280dp"
+        android:layout_marginStart="120dp"
+        android:fontFamily="@font/metropolis_semi_bold"
+        android:text="user@gmail.com"
+        android:textColor="@color/black"
+        android:textSize="14sp" />
+
+    <TextView
+        android:id="@+id/btnChangeInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="120dp"
         android:fontFamily="@font/metropolis_semi_bold"
-        android:text="Save"
+        android:text="Change"
         android:textColor="@color/gray"
         android:textSize="16sp" />
 
@@ -64,54 +121,6 @@
         android:textColor="@color/gray"
         android:textSize="16sp" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/layout_name"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="170dp"
-        android:hint="Full name"
-        app:boxBackgroundColor="@color/white"
-        app:endIconCheckable="true"
-        app:endIconMode="custom"
-        app:helperTextTextColor="#9A5E5E">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edtFullName"
-            android:layout_width="match_parent"
-            android:layout_height="58dp"
-            android:fontFamily="@font/metropolis_semi_bold"
-            android:inputType="textPersonName"
-            android:text="asf" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/layout_email"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="270dp"
-        android:elevation="10dp"
-        android:hint="Email"
-        app:boxBackgroundColor="@color/white"
-        app:endIconCheckable="true"
-        app:endIconMode="custom"
-        app:helperTextTextColor="#9A5E5E">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edtEmail"
-            android:layout_width="match_parent"
-            android:layout_height="58dp"
-            android:fontFamily="@font/metropolis_semi_bold"
-            android:inputType="datetime"
-            android:text="nvtu@gmail.com" />
-    </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
         android:id="@+id/textView"
@@ -165,6 +174,15 @@
             android:layout_weight="1"
             android:text="**********************" />
     </LinearLayout>
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:id="@+id/imgUser"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="180dp"
+        android:src="@drawable/img" />
 
     <TextView
         android:id="@+id/textView39"
